<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_score_start"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score_start"
        android:textSize="22sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvFinalScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnReplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvHighScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
